generator client {
  provider     = "prisma-client-js"
  moduleFormat = "cjs"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

datasource db {
  provider  = "postgresql"
}

enum Gender {
  MALE
  FEMALE
  UNISEX
}

enum ProductStatus {
  IN_STOCK
  OUT_OF_STOCK
  DISCONTINUED
}

enum Role {
  USER
  ADMIN
}

enum UserStatus {
  PENDING
  APPROVED
  REJECTED
}

enum OrderStatus {
  PENDING
  APPROVED
  REJECTED
  COMPLETED
}

model User {
  id         String   @id @default(cuid())
  email      String   @unique
  phone_no   String   @unique @map("phone_no")
  password   String
  name       String?
  avatar_url String?  @map("avatar_url")
  status     UserStatus @default(PENDING)
  role       Role     @default(USER)
  created_at DateTime @default(now()) @map("created_at")
  updated_at DateTime @updatedAt @map("updated_at")
  orders     Order[]
  notifications Notification[]

  @@map("users")
}

model OtpVerification {
  id         String   @id @default(cuid())
  email      String
  code       String
  expires_at DateTime @map("expires_at")
  created_at DateTime @default(now()) @map("created_at")

  @@map("otp_verifications")
}

model Product {
  id          String           @id @default(cuid())
  name        String
  description String?
  category    String
  brand       String?
  gender      Gender           @default(UNISEX)
  price       Decimal          @db.Decimal(10, 2)
  created_at  DateTime         @default(now()) @map("created_at")
  updated_at  DateTime         @updatedAt @map("updated_at")
  images      ProductImage[]
  variants    ProductVariant[]

  @@map("products")
}

model ProductVariant {
  id         String        @id @default(cuid())
  product_id String        @map("product_id")
  color      String
  size       String
  stock      Int           @default(0)
  status     ProductStatus @default(IN_STOCK)
  product    Product       @relation(fields: [product_id], references: [id], onDelete: Cascade)
  created_at DateTime      @default(now()) @map("created_at")
  updated_at DateTime      @updatedAt @map("updated_at")
  order_lines OrderLine[]

  @@map("product_variants")
}

model ProductImage {
  id         String   @id @default(cuid())
  product_id String   @map("product_id")
  image_url  String   @map("image_url")
  is_primary Boolean  @default(false) @map("is_primary")
  product    Product  @relation(fields: [product_id], references: [id], onDelete: Cascade)
  created_at DateTime @default(now()) @map("created_at")
  updated_at DateTime @updatedAt @map("updated_at")

  @@map("product_images")
}

model Order {
  id           String      @id @default(cuid())
  user_id      String      @map("user_id")
  user         User        @relation(fields: [user_id], references: [id], onDelete: Cascade)
  total_amount Decimal     @db.Decimal(10, 2) @map("total_amount")
  status       OrderStatus @default(PENDING)
  created_at   DateTime    @default(now()) @map("created_at")
  updated_at   DateTime    @updatedAt @map("updated_at")
  order_lines  OrderLine[]

  @@map("orders")
}

model OrderLine {
  id         String         @id @default(cuid())
  order_id   String         @map("order_id")
  order      Order          @relation(fields: [order_id], references: [id], onDelete: Cascade)
  variant_id String         @map("variant_id")
  variant    ProductVariant @relation(fields: [variant_id], references: [id], onDelete: Cascade)
  quantity   Int            @default(1)
  price      Decimal        @db.Decimal(10, 2)

  @@map("order_lines")
}

model Notification {
  id         String   @id @default(cuid())
  user_id    String   @map("user_id")
  user       User     @relation(fields: [user_id], references: [id], onDelete: Cascade)
  order_id   String?  @map("order_id")
  title      String
  message    String
  is_read    Boolean  @default(false) @map("is_read")
  created_at DateTime @default(now()) @map("created_at")

  @@map("notifications")
}