//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table users {
  id String [pk]
  email String [unique, not null]
  phone_no String [unique, not null]
  password String [not null]
  name String
  avatar_url String
  status UserStatus [not null, default: 'PENDING']
  role Role [not null, default: 'USER']
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  orders orders [not null]
  notifications notifications [not null]
}

Table otp_verifications {
  id String [pk]
  email String [not null]
  code String [not null]
  expires_at DateTime [not null]
  created_at DateTime [default: `now()`, not null]
}

Table products {
  id String [pk]
  name String [not null]
  description String
  category String [not null]
  brand String
  gender Gender [not null, default: 'UNISEX']
  price Decimal [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  images product_images [not null]
  variants product_variants [not null]
}

Table product_variants {
  id String [pk]
  product_id String [not null]
  color String [not null]
  size String [not null]
  stock Int [not null, default: 0]
  status ProductStatus [not null, default: 'IN_STOCK']
  product products [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  order_lines order_lines [not null]
}

Table product_images {
  id String [pk]
  product_id String [not null]
  image_url String [not null]
  is_primary Boolean [not null, default: false]
  product products [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
}

Table orders {
  id String [pk]
  user_id String [not null]
  user users [not null]
  total_amount Decimal [not null]
  status OrderStatus [not null, default: 'PENDING']
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  order_lines order_lines [not null]
}

Table order_lines {
  id String [pk]
  order_id String [not null]
  order orders [not null]
  variant_id String [not null]
  variant product_variants [not null]
  quantity Int [not null, default: 1]
  price Decimal [not null]
}

Table notifications {
  id String [pk]
  user_id String [not null]
  user users [not null]
  order_id String
  title String [not null]
  message String [not null]
  is_read Boolean [not null, default: false]
  created_at DateTime [default: `now()`, not null]
}

Enum Gender {
  MALE
  FEMALE
  UNISEX
}

Enum ProductStatus {
  IN_STOCK
  OUT_OF_STOCK
  DISCONTINUED
}

Enum Role {
  USER
  ADMIN
}

Enum UserStatus {
  PENDING
  APPROVED
  REJECTED
}

Enum OrderStatus {
  PENDING
  APPROVED
  REJECTED
  COMPLETED
}

Ref: product_variants.product_id > products.id [delete: Cascade]

Ref: product_images.product_id > products.id [delete: Cascade]

Ref: orders.user_id > users.id [delete: Cascade]

Ref: order_lines.order_id > orders.id [delete: Cascade]

Ref: order_lines.variant_id > product_variants.id [delete: Cascade]

Ref: notifications.user_id > users.id [delete: Cascade]